log
Sat 07 Oct 2023 10:29:50 PM UTC: 
 tests:  0|5
total_score: 0/70
b3b4cd2
Sat 07 Oct 2023 11:24:53 PM UTC: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0972bbd
Sat 07 Oct 2023 11:25:08 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a9b9071
Sat 07 Oct 2023 11:25:56 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
d13c969
Sun 08 Oct 2023 01:14:25 AM UTC: 
 sudoku.c | 39 ++++++++++++++++++++++++++++++++++++++-
 1 file changed, 38 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:77:64: error: subscripted value is neither array nor pointer nor vector
   77 |           if (validarSubMatriz[filaSubMatriz][columnaSubMatriz][num] == 1)
      |                                                                ^
sudoku.c:81:60: error: subscripted value is neither array nor pointer nor vector
   81 |           validarSubMatriz[filaSubMatriz][columnaSubMatriz][num] = 1;
      |                                                            ^
sudoku.c:50:7: error: variable ‘validarSubMatriz’ set but not used [-Werror=unused-but-set-variable]
   50 |   int validarSubMatriz[9][10] = {0};
      |       ^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
12c911c
Sun 08 Oct 2023 01:15:12 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f46828a
Sun 08 Oct 2023 01:17:57 AM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
7fbbe6b
Sun 08 Oct 2023 01:28:23 AM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
9655afc
Sun 08 Oct 2023 01:35:34 AM UTC: 
 sudoku.c | 53 ++++++++++++++++++++++++-----------------------------
 1 file changed, 24 insertions(+), 29 deletions(-)
 tests:  2|4
total_score: 15/70
fadefff
